syntax = "proto3";
option go_package = "github.com/disys-mock-exam/api";

service DHT {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Put(PutRequest) returns (PutResponse) {}

    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse) {}
    rpc Election(ElectionRequest) returns (ElectionResponse) {}
    rpc ClaimLeader(LeaderAnnouncement) returns (LeaderAnnouncementAck) {}
}

message GetRequest {
    int64 key = 1;
}

message GetResponse {
    int64 value = 1;
}

message PutRequest {
    int64 key = 1;
    int64 value = 2;
}

message PutResponse {
    bool success = 1;
}

message ElectionRequest {
    int64 processId = 1;
}

message ElectionResponse {
    int64 processId = 1;
}

message LeaderAnnouncement {
    int64 processId = 1;
}

message LeaderAnnouncementAck {
}

message HeartbeatRequest {
    map<int64, int64> keyValuePairs = 1;
}

message HeartbeatResponse {
}